[gd_scene format=3 uid="uid://d14lpmguj65r2"]

[ext_resource type="Script" uid="uid://bfcpoa5eaw7re" path="res://character_body_2d.gd" id="1_4flbx"]
[ext_resource type="AudioStream" uid="uid://bxmx2exjb4817" path="res://assets/Soundtrack/HALFTONE SFX Pack LITE/Gameplay/3. Movement/Bounce_3.wav" id="3_dw050"]
[ext_resource type="AudioStream" uid="uid://b1oiu6kkubfqt" path="res://assets/Soundtrack/Post-Dream Ambient/Loops/One_Loop.wav" id="3_hqtel"]
[ext_resource type="Texture2D" uid="uid://odpm6r5bqhve" path="res://assets/Player/NEW/Assets.png" id="3_i3pqv"]
[ext_resource type="AudioStream" uid="uid://23myrx1orsw0" path="res://assets/Soundtrack/HALFTONE SFX Pack LITE/Gameplay/3. Movement/Steps_1.wav" id="4_1jxqw"]
[ext_resource type="AudioStream" uid="uid://kj875tb7xrku" path="res://assets/Soundtrack/HALFTONE SFX Pack LITE/Gameplay/2. Loose/Loose_14.wav" id="4_dw050"]
[ext_resource type="AudioStream" uid="uid://brkjo80wnsiww" path="res://assets/Soundtrack/HALFTONE SFX Pack LITE/Gameplay/3. Movement/Jump_21.wav" id="6_dw050"]
[ext_resource type="AudioStream" uid="uid://bw4nn3fvb6ald" path="res://assets/Soundtrack/sounds/hurt.wav" id="7_1jxqw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_i3pqv"]
atlas = ExtResource("3_i3pqv")
region = Rect2(500, 1401, 500, 467)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqtel"]
atlas = ExtResource("3_i3pqv")
region = Rect2(0, 1401, 500, 467)

[sub_resource type="AtlasTexture" id="AtlasTexture_sweqy"]
atlas = ExtResource("3_i3pqv")
region = Rect2(1000, 1401, 500, 467)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7ghd"]
atlas = ExtResource("3_i3pqv")
region = Rect2(0, 1401, 500, 467)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvl01"]
atlas = ExtResource("3_i3pqv")
region = Rect2(500, 467, 500, 467)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivps1"]
atlas = ExtResource("3_i3pqv")
region = Rect2(1000, 467, 500, 467)

[sub_resource type="AtlasTexture" id="AtlasTexture_urp6f"]
atlas = ExtResource("3_i3pqv")
region = Rect2(1500, 467, 500, 467)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwjto"]
atlas = ExtResource("3_i3pqv")
region = Rect2(2000, 467, 500, 467)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hs0m"]
atlas = ExtResource("3_i3pqv")
region = Rect2(1000, 934, 500, 467)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jxqw"]
atlas = ExtResource("3_i3pqv")
region = Rect2(1500, 934, 500, 467)

[sub_resource type="AtlasTexture" id="AtlasTexture_dw050"]
atlas = ExtResource("3_i3pqv")
region = Rect2(2000, 934, 500, 467)

[sub_resource type="AtlasTexture" id="AtlasTexture_b26j0"]
atlas = ExtResource("3_i3pqv")
region = Rect2(0, 1401, 500, 467)

[sub_resource type="AtlasTexture" id="AtlasTexture_606se"]
atlas = ExtResource("3_i3pqv")
region = Rect2(1000, 1868, 500, 467)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1c27"]
atlas = ExtResource("3_i3pqv")
region = Rect2(1500, 1868, 500, 467)

[sub_resource type="AtlasTexture" id="AtlasTexture_dx0e4"]
atlas = ExtResource("3_i3pqv")
region = Rect2(2000, 1868, 500, 467)

[sub_resource type="AtlasTexture" id="AtlasTexture_jm5j8"]
atlas = ExtResource("3_i3pqv")
region = Rect2(0, 2335, 500, 467)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hik5"]
atlas = ExtResource("3_i3pqv")
region = Rect2(500, 2335, 500, 467)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtqh7"]
atlas = ExtResource("3_i3pqv")
region = Rect2(1000, 2335, 500, 467)

[sub_resource type="SpriteFrames" id="SpriteFrames_hiqhm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3pqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sweqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sweqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sweqy")
}],
"loop": true,
"name": &"dash",
"speed": 25.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7ghd")
}],
"loop": true,
"name": &"fall",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvl01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivps1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urp6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwjto")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hs0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jxqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dw050")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b26j0")
}],
"loop": true,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_606se")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1c27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dx0e4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jm5j8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hik5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtqh7")
}],
"loop": true,
"name": &"run",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_netr7"]
size = Vector2(28, 52)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_onrkg"]
size = Vector2(28, 52)

[node name="CharacterBody2D" type="CharacterBody2D" unique_id=2060964023 groups=["Player"]]
script = ExtResource("1_4flbx")

[node name="OffsetNode" type="Node2D" parent="." unique_id=1791326005]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="OffsetNode" unique_id=2138080002 groups=["Player"]]
texture_filter = 1
position = Vector2(9, 0)
sprite_frames = SubResource("SpriteFrames_hiqhm")
animation = &"jump"
frame_progress = 0.08684539

[node name="CollisionShape2D" type="CollisionShape2D" parent="OffsetNode" unique_id=1112397092]
position = Vector2(9, -1)
shape = SubResource("RectangleShape2D_netr7")

[node name="Camera2D" type="Camera2D" parent="." unique_id=803149390]
position = Vector2(0, -62)
zoom = Vector2(2, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1180519826]
position = Vector2(9, -1)
shape = SubResource("RectangleShape2D_onrkg")

[node name="DashSound" type="AudioStreamPlayer2D" parent="." unique_id=1668956393]
stream = ExtResource("3_dw050")
bus = &"SFX"

[node name="DeathSound" type="AudioStreamPlayer2D" parent="." unique_id=1741547549]
stream = ExtResource("4_dw050")
bus = &"SFX"

[node name="RunSound" type="AudioStreamPlayer2D" parent="." unique_id=1615230337]
stream = ExtResource("4_1jxqw")
bus = &"Footsteps"

[node name="BGMPlayer" type="AudioStreamPlayer2D" parent="." unique_id=82977771]
stream = ExtResource("3_hqtel")
autoplay = true
bus = &"BGM"

[node name="JumpSound" type="AudioStreamPlayer2D" parent="." unique_id=973581527]
stream = ExtResource("6_dw050")
bus = &"SFX"

[node name="HurtSound" type="AudioStreamPlayer2D" parent="." unique_id=1501369592]
stream = ExtResource("7_1jxqw")
bus = &"SFX"
